tests/baselines/reference/jsFileCompilation_js_importMissingFileExtension_cjs_mjs.errors.txt
tests/cases/compiler/index.js(1,18): error TS2792: Cannot find module './blah'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
tests/cases/compiler/index.js(2,30): error TS2792: Cannot find module './utils'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/compiler/blah.mjs (0 errors) ====
    export default class Blah {}
    
==== tests/cases/compiler/utils.cjs (0 errors) ====
    function util1() {}
    function util2() {}
    module.exports = { util1, util2 };
    
==== tests/cases/compiler/index.js (2 errors) ====
    import Blah from "./blah";
                     ~~~~~~~~
!!! error TS2792: Cannot find module './blah'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    import { util1, util2 } from "./utils";
                                 ~~~~~~~~~
!!! error TS2792: Cannot find module './utils'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    